alignment corrected

--- a/src/styles/screen.sass
+++ b/src/styles/screen.sass
@@ -186,13 +186,13 @@ h5
 
 .bar
   margin: 10px
-  font-size: 9px
-  font-weight: bold
+  font-size: 11px
+  font-weight: bolder
   padding-left: 11px
-  padding-right: -50px
   border-left: 1px solid white
   text-align: center
   justify-content: center
+  margin-right: 0
 
 .bar:hover
   background-color: white
@@ -204,10 +204,10 @@ h5
 
 .barhome
   padding: 0
-  margin: 10px
-  font-size: 9px
-  font-weight: bold
-  padding-left: 5px
+  margin-right: 0
+  font-size: 11px
+  font-weight: bolder
+  padding-left: -5px
   text-align: center
 
 .barhome:hover
